# CellClear

./: LICENSE  README.md  pyproject.toml  requirements.txt
CellClear/: base_cli.py
CellClear/correct_expression/: argparser.py  cli.py  correct_expression.py  plot.py  utils.py
paper_codes/RemoveAmbient/: decontx.r  fastcar.r  soupx.r
paper_codes/Script/: hgmm_12k.py  human_pbmc.py  human_skin.py  mouse_kidney.py  preprocess_data.py  resource_comsumption.py  step1_preprocessing.py  step2_draw_1st_data.py  step3_draw_2nd_data.py  testis_monocle3.py
testthat/: figure_scripts.R  figure_scripts.py
testthat/Analysis/: integration.py
testthat/Analysis/RemoveAmbient/: cellbender.sh  decontx.r  soupx.r
