[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "CellClear"
description = "Estimating and removing ambient expression in scRNA-seq data"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "WhiteRabBio"}]
keywords = ["scRNA-seq", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
dynamic = ["version", "dependencies"]

[project.scripts]
CellClear = "CellClear.base_cli:main"

[tool.setuptools]
packages = ["CellClear", "CellClear.correct_expression"]

[tool.setuptools.dynamic]
version = {attr = "CellClear.__version__"}
dependencies = {file = ["requirements.txt"]}
